--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "relbp-me",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.html"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
-
