--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "relbp-me",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.html"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
